<resources>
    <string name="app_name">GameCep</string>
    <string name="criar_servidor">Criar Servidor</string>
    <string name="entrar_como_jogador">Entrar como jogador</string>
    <string name="identifique_se">Identifique-se</string>
    <string name="nome">Nome:</string>
    <string name="nome_do_jogador">Nome do jogador</string>
    <string name="cep">CEP:</string>
    <string name="cep_do_jogador">CEP do jogador</string>
    <string name="verificar_localizacao">Verificar Localização</string>
    <string name="estado_label">Estado:</string>
    <string name="cidade_label">Cidade:</string>
    <string name="bairro_label">Bairro:</string>
    <string name="rua_av_label">Rua/Av:</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua_avenida">Rua/Avenida</string>
    <string name="gamecep">GameCEP</string>
    <string name="local_valido">Localização Válida</string>
    <string name="jogador">Jogador</string>
    <string name="inimigo">Inimigo</string>
    <string name="porta">Porta:</string>
    <string name="ip_label">IP:</string>
    <string name="endereco_ip">Endereço ip</string>
    <string name="dados_conexao">Dados da Conexão</string>
    <string name="zeros">00-000</string>
    <string name="cep_inimigo">CEP inicial do inimigo</string>
    <string name="localizar">Localizar</string>
    <string name="_000">000</string>
    <string name="_00_000">00-000</string>
    <string name="dica">Dica:</string>
    <string name="pontos">Pontos</string>
    <string name="ip">IP:</string>
    <string name="xxx_xxx_x_x">xxx.xxx.x.x</string>
    <string name="_9090">9090</string>
    <string name="_100">100</string>
    <string name="parabens">Parabéns. Você acertou</string>
    <string name="inimigo_menor">Errou. CEP Inimigo é menor</string>
    <string name="inimigo_maior">Errou. CEP Inimigo é maior</string>
    <string name="cep_valido">CEP válido</string>
    <string name="cep_invalido">CEP inválido!!!</string>
    <string name="servidor">Servidor</string>
    <string name="cliente">Cliente</string>
</resources>