<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentificacaoActivity">

    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/identifique_se"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nome"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloTextView" />

    <EditText
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/nome_do_jogador"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/nomeLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/nomeLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/nomeLabelTextView" />

    <TextView
        android:id="@+id/cepLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cep"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nomeLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/nomeLabelTextView" />

    <EditText
        android:id="@+id/cepTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cep_do_jogador"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/cepLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/nomeTextView"
        app:layout_constraintTop_toTopOf="@+id/cepLabelTextView" />

    <Button
        android:id="@+id/verificarLocalizacaoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botao_azul_arredondado"
        android:text="@string/verificar_localizacao"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cepTextView" />

    <TextView
        android:id="@+id/estadoLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/estado_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cepLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/verificarLocalizacaoButton" />

    <TextView
        android:id="@+id/cidadeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cidade_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/estadoLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/estadoLabelTextView" />

    <TextView
        android:id="@+id/bairroLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bairro_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cidadeLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/cidadeLabelTextView" />

    <TextView
        android:id="@+id/ruaLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rua_av_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/bairroLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/bairroLabelTextView" />

    <TextView
        android:id="@+id/estadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/estado"
        android:ems="13"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/estadoLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/estadoLabelTextView" />

    <TextView
        android:id="@+id/cidadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cidade"
        android:ems="13"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/cidadeLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/estadoTextView" />

    <TextView
        android:id="@+id/bairroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bairro"
        android:ems="13"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/bairroLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/cidadeTextView" />

    <TextView
        android:id="@+id/ruaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/ruaLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/bairroTextView" />

    <TextView
        android:id="@+id/localValidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/local_valido"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ruaTextView" />

    <Button
        android:id="@+id/criarServidorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botao_azul_arredondado"
        android:text="@string/criar_servidor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localValidoTextView" />

    <Button
        android:id="@+id/entrarJogoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botao_azul_arredondado"
        android:text="@string/entrar_como_jogador"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criarServidorButton" />
</androidx.constraintlayout.widget.ConstraintLayout>